# NimQt

./: .gitignore  CMakeLists.txt
Nim/: .gitignore  QAbstractButton.nim  QAction.nim  QAction_t  QAction_t.nim  QApplication.nim  QBoxLayout.nim  QFrame.nim  QGridLayout.nim  QHBoxLayout.nim  QLabel.nim  QLayout.nim  QLayoutItem.nim  QObject.nim  QPushButton.nim  QSpacerItem.nim  QVBoxLayout.nim  QWidget.nim  Qt.nim  mnlibrary.nim  perser.nim  perser_.nim  stack.nim  test.nim  test.ui  test2.nim  test_stack.nim
Nim/tests/: QLaout_t  QLaout_t.nim  QObject_t  QObject_t.nim
QT/: CMakeLists.txt
QT/Core/: CMakeLists.txt  QObject.cpp  QObject.h  QString.cpp  QString.h
QT/WIDGET/: CMakeLists.txt  QAbstractButton.cpp  QAbstractButton.h  QAction.cpp  QAction.h  QApplication.cpp  QApplication.h  QBoxLayout.cpp  QBoxLayout.h  QFrame.cpp  QFrame.h  QGridLayout.cpp  QGridLayout.h  QHBoxLayout.cpp  QHBoxLayout.h  QIcon.cpp  QIcon.h  QLabel.cpp  QLabel.h  QLayout.cpp  QLayout.h  QObject.cpp  QObject.h  QPushButton.cpp  QPushButton.h  QSpacerItem.cpp  QSpacerItem.h  QVBoxLayout.cpp  QVBoxLayout.h  QWidget.cpp  QWidget.h  QtEnum.cpp  QtEnum.h  main.c
